# find-torrent-data

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE
.github/workflows/: docker-publish.yml
TODO/: README.md
docs/: about-program.md  docker-compose.yaml  find.sh  find_torrents.sh  migration.py  migration.sh  rename_torrent_file.sh  scheme.md  structure.md  use.md
src/: logging.rs  main.rs  searchengine.rs
src/searchengine/: filedata.rs  postgresql.rs
stand/: README.md  docker-compose.yaml
tests/: generate_torrent.sh  integration_test.rs
tests/torrents/: debian-12.10.0-amd64-netinst.iso.torrent
todo/: README.md
