[package]
name = "find-torrent-data"
# TODO: версия
version = "0.1.3"
authors = ["Richard Patel <me@terorie.dev>", "Sergei Ermeikin <sereja.ermeikin@gmail.com>"]
edition = "2024"
description = "Tool to search for and link files that are part of a torrent"
license = "MIT"
homepage = "https://github.com/mistikan/find-torrent-data"
repository = "https://github.com/mistikan/find-torrent-data"
readme = "README.md"
categories = ["command-line-utilities", "filesystem"]
keywords = ["bittorrent"]
# TODO: ссылки документацию поправить
documentation = "https://docs.rs/find-torrent-data"
exclude = [
	".github/workflows/rust.yml",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
crc32fast = "1"
lava_torrent = "0.11"
multimap = "0.10"
sha-1 = "0.10"
walkdir = "2"
log = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
postgres = "0.19"
permutator = "0.4"
rayon = "1"
hex = "0.4.3"
reqwest = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
postgres-native-tls = "0.5"
native-tls = "0.2"
serde_bencode = "0.2"
